--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "strapi-utils": "3.0.0-beta.18.6"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Stefano Frontini"
   },
   "strapi": {
     "uuid": "8fb7153c-0f4b-4f8d-8e3e-2393f0d02c8e"
