--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "strapi": "3.0.0-beta.20",
-    "strapi-admin": "3.0.0-beta.20",
-    "strapi-connector-mongoose": "3.0.0-beta.20",
-    "strapi-plugin-content-manager": "3.0.0-beta.20",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.20",
-    "strapi-plugin-email": "3.0.0-beta.20",
-    "strapi-plugin-graphql": "3.0.0-beta.20",
-    "strapi-plugin-upload": "3.0.0-beta.20",
-    "strapi-plugin-users-permissions": "3.0.0-beta.20",
-    "strapi-provider-upload-cloudinary": "3.0.0-beta.20",
-    "strapi-utils": "3.0.0-beta.20"
+    "strapi": "3.0.5",
+    "strapi-admin": "3.0.5",
+    "strapi-connector-mongoose": "3.0.5",
+    "strapi-plugin-content-manager": "3.0.5",
+    "strapi-plugin-content-type-builder": "3.0.5",
+    "strapi-plugin-email": "3.0.5",
+    "strapi-plugin-graphql": "3.0.5",
+    "strapi-plugin-upload": "3.0.5",
+    "strapi-plugin-users-permissions": "3.0.5",
+    "strapi-provider-upload-cloudinary": "3.0.5",
+    "strapi-utils": "3.0.5"
   },
   "author": {
-    "name": "Stefano-Frontini"
+    "name": "Stefano Frontini"
   },
   "strapi": {
     "uuid": "8fb7153c-0f4b-4f8d-8e3e-2393f0d02c8e"
